fix css z-index

--- a/src/sc2-features/f2-profile/ui/EditModal/EditModal.module.css
+++ b/src/sc2-features/f2-profile/ui/EditModal/EditModal.module.css
@@ -13,6 +13,7 @@
     opacity: 0;
     pointer-events: none;
     transition: 0.5s;
+    z-index: 10;
 }
 
 .mainBlock.active {
